--- a/main.css
+++ b/main.css
@@ -5,12 +5,11 @@ body{
 .board{
 	display:grid;
 	justify-self:center;
-	justify-content:center;
+	align-self:center;
 	grid-template-columns:1fr 1fr 1fr;
 	gap:1em;
 	width:40vw;
 	height:40vw;
-	margin-top:3em;
 	background-color:aqua;
 }
 
