--- a/main.css
+++ b/main.css
@@ -39,6 +39,7 @@ body{
 	justify-self:center;
 	grid-template-columns:1fr 1fr 1fr;
 	gap:1em;
+	grid-row:2/2;
 	width:calc(60vw+2em);
 	height:calc(60vw+2em);
 	background-color: #fffafa;
@@ -73,7 +74,8 @@ body{
 	display:flex;
 	color:magenta;
 	font-weight:bold;
-	font-size:4em;
+	font-size:3em;
+	flex-basis:100%;
 	flex-direction:column;
 	align-items:center;
 	justify-content:center;
